@@ -53,6 +53,7 @@ cgrates (0.11.0~dev) UNRELEASED; urgency=medium
   * [SessionS] Added support for *stir_authenticate
   * [SessionS] Added support for *stir_initiate
   * [RouteS] Renaming from SupplierS to RouteS
+  * [AgentRequest] Improved NavigableMap
 
  -- Alexandru Tripon <alexandru.tripon@itsyscom.com>  Wed, 19 Feb 2020 13:25:52 +0200
 
